syntax = "proto3";

package org.orleans.silo;

service Greeter{
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest{
    string name =1;
}

message HelloReply{
    string message = 1;
}